Stuck footer to bottom of page, fixed header positioning

--- a/client/style/main.css
+++ b/client/style/main.css
@@ -4,6 +4,7 @@ body{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size:16px;
     line-height:1.2em;
+    min-height:100%;
     margin:0;
 }
 
@@ -13,13 +14,20 @@ body{
     overflow:hidden;
 }
 
+.headNav{
+    background-color:#333;
+    position:fixed;
+    margin-left:5%;
+    border-radius: 0px 0px 15px 15px;
+}
+
 .postPreview{
     width:49%;
     float: left;
     margin: 1px;
     box-sizing: border-box;
     border: 3px solid #333;
-    border-radius: 10px;
+    border-radius: 15px;
     max-height:250px;
 }
 
@@ -30,12 +38,17 @@ body{
 #mainHeader{
     background-color:#333333;
     color:#ffffff;
-    text-align:center;
+    float:left;
+    padding-left:15px;
+    width:55%;
+    line-height:1.6rem;
 }
 
 #navBar{
     background-color:#333;
     color:#ffffff;
+    float:right;
+    width:35%;
 }
 
 #navBar ul{
@@ -46,11 +59,25 @@ body{
     display:inline;
 }
 
+#navBar li:hover{
+    /* margin:15px; */
+}
+
 #navBar a{
     color:white;
     text-decoration: none;
     font-size:18px;
-    padding-right:15px;
+    padding:15px;
+}
+
+
+#navBar a:hover{
+    /* color:lightslategray; */
+    background-color:lightslategrey;
+}
+
+#navBar a:active{
+    color:rgb(8, 117, 226);
 }
 
 #showcase{
@@ -58,8 +85,9 @@ body{
     background-position:center center;
     background-size:cover;
     background-repeat:no-repeat;
+    border-radius:15px;
     min-height:400px;
-    margin-bottom:30px;
+    margin:70px 0px 15px 0px;
     text-align:center;
 }
 
@@ -87,12 +115,18 @@ body{
     border-radius:10px;
 }
 
-#mainFooter{
-    background:#333333;
-    color:#ffffff;
+#div_footer{
+    position:relative;
+    margin-top:70px;
+}
+
+#footer_content{
+    background:#333;
+    color:#fff;
     text-align:center;
-    padding:10px;
-    margin-top:40px;
+    width:100%;
+    bottom:0px;
+    position:absolute;
 }
 
 @media(max-width:600px){
@@ -108,5 +142,18 @@ body{
     .postPreview{
         width:100%;
         float:none;
+    }
+
+    #navBar{
+        width:100%;
+        float:none;
+        text-align: center;
+    }
+
+    #mainHeader{
+        width:100%;
+        float:none;
+        padding-left:0px;
+        text-align: center;
     }
 }
